[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ware-ops-pipes"
version = "0.1.0"
description = "Pipeline tool to build and run automated warehouse optimization."
requires-python = ">=3.11"
dependencies = [
    "ware_ops_algos",
    "cls-luigi==0.1.1",
    "luigi==3.6.0",
    "pandas"
]

[tool.uv.sources]
ware-ops-algos = { path = "../ware_ops_algos", editable = true }

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]
eval = [
    "jupyter",
    "tqdm",
    "orjson",
    "seaborn",
    "jinja2"
]
docs = [
    "sphinx",
    "sphinx-design",
    "sphinx-autoapi",
    "sphinx-copybutton",
    "furo",
    "myst-nb",
    "nbsphinx",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]