[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ware-pipes-cosy"
version = "0.1.0"
description = "Benchnark suite for warehouse optimization."
requires-python = ">=3.11"
dependencies = [
    "ware_ops_algos",
    "cosy-luigi",
    "luigi",
    "pandas"
]

[tool.uv.sources]
ware-ops-algos = { path = "../ware_ops_algos", editable = true }
cosy-luigi = { url = "https://github.com/cls-python/cosy-luigi/releases/download/nightly/cosy_luigi-nightly.tar.gz" }

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]
eval = [
    "jupyter",
    "tqdm",
    "orjson",
    "seaborn",
    "jinja2"
]
docs = [
    "sphinx",
    "sphinx-design",
    "sphinx-autoapi",
    "sphinx-copybutton",
    "furo",
    "myst-nb",
    "nbsphinx",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]